--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
 				left and right arrow keys to navigate.</p>
 			<p>Apparently we had reached a great height in the atmosphere, for the sky was a dead black, and the stars had ceased to
 				twinkle. By the same illusion which lifts the horizon of the sea to the level of the spectator on a hillside, the sable
-				cloud beneath was dished out, &amp; the car seemed to float in the middle of an immense dark sphere, whose upper half was
-				strewn with silver. Looking down into the dark gulf below, I could see a ruddy light streaming through a rift in the
-				clouds. It was probably a last glimpse of London, or some neighbouring town; but soon the rolling vapours closed, &amp; shut
-				it out.</p>
+				cloud beneath was dished out, &amp; the car seemed to float in the middle of an immense dark sphere, whose upper half
+				was strewn with silver. Looking down into the dark gulf below, I could see a ruddy light streaming through a rift in
+				the clouds. It was probably a last glimpse of London, or some neighbouring town; but soon the rolling vapours closed,
+				&amp; shut it out.</p>
 			<p>I now realised to the full that I was nowhere, or to speak more correctly, a wanderer in empty space—that I had left one
 				world behind me and was travelling to another, like a disembodied spirit crossing the gloomy Styx. A strange serenity
 				took possession of my soul, and all that had polluted or degraded it in the lower life seemed to fall away from it like
@@ -90,6 +90,22 @@
 				in my ear, "Hush! What art thou? Be humble and revere."</p>
 		</article>
 	</div>
+	<script>
+		(function (i, s, o, g, r, a, m) {
+			i['GoogleAnalyticsObject'] = r;
+			i[r] = i[r] || function () {
+				(i[r].q = i[r].q || []).push(arguments)
+			}, i[r].l = 1 * new Date();
+			a = s.createElement(o),
+				m = s.getElementsByTagName(o)[0];
+			a.async = 1;
+			a.src = g;
+			m.parentNode.insertBefore(a, m)
+		})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+		ga('create', 'UA-90419707-1', 'auto');
+		ga('send', 'pageview');
+	</script>
 	<script src="js/jquery-2.1.4.js"></script>
 	<script src="js/fonts.js"></script>
 	<script src="js/webfont.js"></script>
