--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 	<div class="article-paper">
 		<article id="main-article">
 			<h1>A trip to Venus: In Space</h1>
-			<p>Updated daily, TypeChemistry is a collection of handpicked font and color combinations. Press spacebar to explore or use
-				left and right arrow keys to navigate.</p>
+			<p>Updated daily, TypeChemistry is a collection of handpicked font and color combinations. Use any of these for your blog or website.
+				Press left or right arrow keys to navigate.</p>
 			<p>Apparently we had reached a great height in the atmosphere, for the sky was a dead black, and the stars had ceased to
 				twinkle. By the same illusion which lifts the horizon of the sea to the level of the spectator on a hillside, the sable
 				cloud beneath was dished out, &amp; the car seemed to float in the middle of an immense dark sphere, whose upper half
