--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	 <!--<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no"> -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>TypeChemistry</title>
 	<!--[if lt IE 9]>
@@ -28,30 +28,38 @@
 			<div class="col-half">
 				<h1 id="logo">TYPE<span class="da">&mdash;</span><br><span class="da">&mdash;</span>CHEMISTRY</h1>
 			</div>
-			<div class="col-5">
-				<h1 class="menu-title">HEADING FONT</h1>
-				<div class="menu-value" id="heading">
-				</div>
-			</div>
-			<div class="col-5">
-				<h1 class="menu-title">BODY FONT</h1>
-				<div class="menu-value" id="paragraph">
-				</div>
-			</div>
-			<div class="col-5" id="colors">
-				<h1 class="menu-title">COLORS</h1>
-				<div id="color-contain">
-					<div class="color-circle has-tooltip" id="circle-heading">
-						<span class="tooltip">
-						</span>
+			<div class="menu-info">
+				<div class="col-5">
+					<div class="menu-title">
+						<h1>HEADING FONT</h1>
 					</div>
-					<div class="color-circle has-tooltip" id="circle-paragraph">
-						<span class="tooltip">
-						</span>
+					<div class="menu-value" id="heading">
 					</div>
-					<div class="color-circle has-tooltip" id="circle-background">
-						<span class="tooltip">
+				</div>
+				<div class="col-5">
+					<div class="menu-title">
+						<h1>PARAGRAPH FONT</h1>
+					</div>
+					<div class="menu-value" id="paragraph">
+					</div>
+				</div>
+				<div class="col-5" id="colors">
+					<div class="menu-title">
+						<h1>COLORS</h1>
+					</div>
+					<div id="color-contain">
+						<div class="color-circle has-tooltip" id="circle-heading">
+							<span class="tooltip">
 						</span>
+						</div>
+						<div class="color-circle has-tooltip" id="circle-paragraph">
+							<span class="tooltip">
+						</span>
+						</div>
+						<div class="color-circle has-tooltip" id="circle-background">
+							<span class="tooltip">
+						</span>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -60,8 +68,8 @@
 	<div class="article-paper">
 		<article id="main-article">
 			<h1>A trip to Venus: In Space</h1>
-			<p>Updated daily, TypeChemistry is a collection of handpicked font and color combinations. Use any of these for your blog or website.
-				Press left or right arrow keys to navigate.</p>
+			<p>TypeChemistry is a collection of handpicked font and color combinations. Use any of these for your blog or website. Press
+				left or right arrow keys to navigate.</p>
 			<p>Apparently we had reached a great height in the atmosphere, for the sky was a dead black, and the stars had ceased to
 				twinkle. By the same illusion which lifts the horizon of the sea to the level of the spectator on a hillside, the sable
 				cloud beneath was dished out, &amp; the car seemed to float in the middle of an immense dark sphere, whose upper half
@@ -75,8 +83,8 @@
 			<p>In the depths of my heart I no longer felt sorry to quit the earth. It seemed to me now, a place where the loveliest things
 				never come to birth, or die the soonest—where life itself hangs on a blind mischance, where true friendship is afraid
 				to show its face, where pure love is unrequited or betrayed, and the noblest benefactors of their fellowmen have been
-				reviled or done to death—a place which we regard as a heaven when we enter it, and a hell before we leave it… . No, I
-				was not sorry to quit the earth</p>
+				reviled or done to death—a place which we regard as a heaven when we enter it, and a hell before we leave it. No, I was
+				not sorry to quit the earth</p>
 			<p>And the beautiful planet, shining there so peacefully in the west, was it any better? At a like distance the earth would
 				seem still fairer, and perhaps even now some wretch in Venus is asking himself a similar question. Is it not probable
 				that just as all the worlds are made of the same materials, so the mixture of good and evil is much the same in all?
