--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 		<div class="menu-center">
 			<div class="col-half">
 				<h1 id="logo">TYPE<span class="da">&mdash;</span><br><span class="da">&mdash;</span>CHEMISTRY</h1>
+				<p id="info-icon">INFO</p>
 			</div>
 			<div class="menu-info">
 				<div class="col-5">
