added jquery mobile

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
 		ga('send', 'pageview');
 	</script>
 	<script src="js/jquery-2.1.4.js"></script>
+	<script src="js/jquery.mobile-1.4.5.min.js"></script>
 	<script src="js/fonts.js"></script>
 	<script src="js/webfont.js"></script>
 	<script src="js/main.js"></script>
