--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
 	<meta name="description" content="TypeChemistry is a collection of handpicked font and color combinations">
-	<meta name="keywords" content="font,pair,google,type,discover,chemistry">
+	<meta name="keywords" content="font,pair,google,type,discover,fonts,colors,chemistry">
 	<meta name="author" content="Abhishek Warokar">
 	<meta name="url" content="https://typechemistry.github.io">
 	<meta name="robots" content="all">
@@ -20,6 +20,8 @@
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Montserrat" rel="stylesheet">
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body>
