--- a/index.html
+++ b/index.html
@@ -15,13 +15,18 @@
 	<meta name="author" content="Abhishek Warokar">
 	<meta name="url" content="https://typechemistry.github.io">
 	<meta name="robots" content="all">
-	<meta name="theme-color" content="#0A0A0A">
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+	<link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+	<link rel="manifest" href="/manifest.json">
+	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#0a0a0a">
+	<meta name="msapplication-TileColor" content="#0a0a0a">
+	<meta name="msapplication-TileImage" content="/mstile-144x144.png">
+	<meta name="theme-color" content="#0a0a0a">
 	<meta name="mobile-web-app-capable" content="yes">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Montserrat" rel="stylesheet">
-	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-	<link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -71,8 +76,7 @@
 	<div class="article-paper">
 		<article id="main-article">
 			<h1>A trip to Venus: In Space</h1>
-			<p>TypeChemistry is a collection of handpicked font and color combinations. Use any of these for your blog or website. Press
-				left or right arrow keys to navigate.</p>
+			<p>TypeChemistry is a collection of handpicked font and color combinations. Press arrow keys or swipe to explore.</p>
 			<p>Apparently we had reached a great height in the atmosphere, for the sky was a dead black, and the stars had ceased to
 				twinkle. By the same illusion which lifts the horizon of the sea to the level of the spectator on a hillside, the sable
 				cloud beneath was dished out, &amp; the car seemed to float in the middle of an immense dark sphere, whose upper half
