--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>TypeChemistry</title>
+	<title>TypeChemistry &bull; A collection of handpicked font & color combinations</title>
 	<!--[if lt IE 9]>
 	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
 	<meta name="description" content="TypeChemistry is a collection of handpicked font and color combinations">
-	<meta name="keywords" content="font,pair,google,type,discover,fonts,colors,chemistry">
+	<meta name="keywords" content="font,pair,fontpair,google,type,discover,fonts,colors,chemistry">
 	<meta name="author" content="Abhishek Warokar">
 	<meta name="url" content="https://typechemistry.github.io">
 	<meta name="robots" content="all">
@@ -39,9 +39,9 @@
 			<div class="menu-info">
 				<div class="col-5">
 					<div class="menu-title">
-						<h1>HEADING FONT</h1>
+						<h1>TITLE FONT</h1>
 					</div>
-					<div class="menu-value" id="heading">
+					<div class="menu-value" id="title">
 					</div>
 				</div>
 				<div class="col-5">
@@ -56,7 +56,7 @@
 						<h1>COLORS</h1>
 					</div>
 					<div id="color-contain">
-						<div class="color-circle has-tooltip" id="circle-heading">
+						<div class="color-circle has-tooltip" id="circle-Title">
 							<span class="tooltip">
 						</span>
 						</div>
