--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<meta name="author" content="Abhishek Warokar">
 	<meta name="url" content="https://typechemistry.github.io">
 	<meta name="robots" content="all">
+	<meta name="google-site-verification" content="YxS5o9VCTbg-QKwlKs93HyuwBPGlt8CjPlICZrtHJDM" />
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 	<link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
 	<link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
