--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 	<meta name="robots" content="all">
 	<meta name="google-site-verification" content="YxS5o9VCTbg-QKwlKs93HyuwBPGlt8CjPlICZrtHJDM" />
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-	<link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
-	<link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+	<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
+	<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
 	<link rel="manifest" href="/manifest.json">
 	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#0a0a0a">
 	<meta name="msapplication-TileColor" content="#0a0a0a">
