--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>TypeChemistry &bull; A collection of handpicked font & color combinations</title>
+	<title>TypeChem &bull; A collection of handpicked font &amp; color combinations</title>
 	<!--[if lt IE 9]>
 	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
-	<meta name="description" content="TypeChemistry is a collection of handpicked font and color combinations">
+	<meta name="description" content="TypeChem is a collection of handpicked font and color combinations">
 	<meta name="keywords" content="font,pair,fontpair,google,type,discover,fonts,colors,chemistry">
 	<meta name="author" content="Abhishek Warokar">
-	<meta name="url" content="https://typechemistry.github.io">
+	<meta name="url" content="https://TypeChem.github.io">
 	<meta name="robots" content="all">
 	<meta name="google-site-verification" content="YxS5o9VCTbg-QKwlKs93HyuwBPGlt8CjPlICZrtHJDM" />
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -77,7 +77,7 @@
 	<div class="article-paper">
 		<article id="main-article">
 			<h1>A trip to Venus: In Space</h1>
-			<p>TypeChemistry is a collection of handpicked font and color combinations. Press arrow keys or swipe to explore.</p>
+			<p>TypeChem is a collection of handpicked font and color combinations. Press arrow keys or swipe to explore.</p>
 			<p>Apparently we had reached a great height in the atmosphere, for the sky was a dead black, and the stars had ceased to
 				twinkle. By the same illusion which lifts the horizon of the sea to the level of the spectator on a hillside, the sable
 				cloud beneath was dished out, &amp; the car seemed to float in the middle of an immense dark sphere, whose upper half
